Hotfix for IE bug

--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -43,7 +43,7 @@
 		</div>
 	</div>
 	<div id="content-container" class="span8">
-		<div class="tab-pane active hero-unit">
+		<div class="hero-unit">
 			<div id="content">
 				{% block tabcontent %}
 				<p>No Content</p>
