--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
 	<br />
 	<div class="row-fluid">
 		<div class="span3">
-		     <img src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/4/000/176/263/229bbff.jpg" alt="Ivan">
+		     <img src="https://dl.dropbox.com/s/l7la7zckw3x6y5q/155297_1733996668219_785330_n.jpg" alt="Ivan">
 		</div>
 		<div class="span3">
 		  <h4> Ivan Darmansyah </h4>
