--- a/templates/confirm_email.html
+++ b/templates/confirm_email.html
@@ -10,5 +10,5 @@
 {% else %}
     <p>Invalid confirmation key.</p>
 {% endif %}
-<a href="../.." class="btn btn-large">Back to login</a>
+<a href="../.." class="btn back-btn btn-large">Back</a>
 {% endblock formtype %}
