--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -1,9 +1,9 @@
-{% extends "group_inbox.html" %}
+{% extends "group_base.html" %}
 
 {# comment: load custom gravatar filter #}
 {% load gravatar %}
 
-{% block tabcontent %}
+{% block maincontent %}
 <form method="post" class="clearfix">
     <textarea class="input-block-level" placeholder="Communicate with your team..." id="id_message" rows="10" cols="40" name="message"></textarea>
 	<input type="submit" value="Post" class="btn" />
@@ -11,61 +11,73 @@
 </form>
 
 {% if post_list %}
+<ul id="posts" class="media-list">
     {% for post in post_list %}
-    <div class="post clearfix">
-        <div class="clearfix">
-            <img class="avatar pull-left" src="{{ post.author.user.email|gravatar:'50' }}" alt="author's gravatar" />
-            <span class="clearfix">
+    <li class="media post">
+        <img class="avatar pull-left media-object" src="{{ post.author.user.email|gravatar:'50' }}" alt="author's gravatar" />
+        <div class="media-body">
+            <span class="media-heading clearfix">
                 <strong class="pull-left">{{ post.author.user.first_name }} {{ post.author.user.last_name }}</strong>
-                <em class="pull-right">{{ post.date_posted }}</em>
+                <abbr class="pull-right">{{ post.date_posted }}</abbr>
+                <span class="pull-right spacing-right">
+                    <a href="javascript:void(0)" class="comment-unhide-btn">Comment</a>
+                </span>
                 <br />
             </span>
-            <span class="pull-right spacing-right">
-                <a href="javascript:void(0)" class="comment-unhide-btn">Comment</a>
-            </span>
             <div class="post-message">{{ post.message }}</div>
-        </div>
-        <div class="comments clearfix">
 	        {% if post.comment_set.all %}
-	            {% for comment in post.comment_set.all %}
-	            <div class="comment">
-	                <p>
-	                    <img class="avatar pull-left" src="{{ comment.author.user.email|gravatar:'50' }}" alt="commenters's gravatar" />
-	                    <span>
-	                        <strong>{{ comment.author.user.first_name }} {{ comment.author.user.last_name }}</strong>
-	                        <em class="pull-right">{{ comment.date_posted }}</em>
-	                        <br />
-	                    </span>
-	                    {{ comment.message }}
-	                </p>
-	            </div>
-	            {% endfor %}
+            <ul class="media-list comments">
+            {% for comment in post.comment_set.all %}
+            <li class="media comment">
+                <img class="avatar pull-left media-object" src="{{ comment.author.user.email|gravatar:'50' }}" alt="commenters's gravatar" />
+                <div class="media-body">
+	                <span class="media-heading clearfix">
+	                    <strong class="pull-left">{{ comment.author.user.first_name }} {{ comment.author.user.last_name }}</strong>
+	                    <em class="pull-right"><abbr class="timeago" title="{{ comment.date_posted }}">{{ comment.date_posted }}</abbr></em>
+	                    <br />
+	                </span>
+	                <div class="comment-message">{{ comment.message }}</div>
+                </div>
+            </li>
+            {% endfor %}
+            </ul>
 	        {% endif %}
 	        <div class="comment-form-container well-small well clearfix hide">
 	            <img class="avatar pull-left" src="{{ user.email|gravatar:'30' }}" alt="user's gravatar" />
 		        <form method="post" class="clearfix comment-form">
 				    <input type="text" placeholder="Comment on this post" id="id_comment" name="comment" class="pull-left spacing-right" autocomplete="off" />
-				    <input type="submit" value="Post" class="btn pull-left" />
+				    <input type="submit" value="Comment" class="btn pull-left" />
 				    {% csrf_token %}
 				</form>
 			</div>
 		</div>
-    </div>
+    </li>
     {% endfor %}
-
+</ul>
 {% else %}
     <div class="alert alert-error">
         No posts are available.
     </div>
 {% endif %}
 
-{% endblock tabcontent %}
+{% endblock maincontent %}
 
 {% block extrajs %}
-<script>
+<script src="https://raw.github.com/rmm5t/jquery-timeago/master/jquery.timeago.js" type="text/javascript"></script>
+<script type="text/javascript">
+$("abbr.timeago").timeago();
 $('.comment-unhide-btn').click(function(event) {
+	var $commentForm;
+	var $post;
 	event.preventDefault();
-    $(this).parents('.post').find(".comment-form-container").show("blind");
+	$post = $(this).parents('.post');
+    $commentForm = $post.find(".comment-form-container");
+    $(this).parent().fadeOut();
+    $commentForm.show("blind", function() {
+    	$('html, body').animate({
+            scrollTop: $post.offset().top - $('.navbar').height()
+        }, 500);
+    });
 });
 </script>
 {% endblock extrajs %}
