pointed static files to cloudfront.bulletinapp.net

--- a/templates/register.html
+++ b/templates/register.html
@@ -13,5 +13,5 @@
 {% endblock formtype %}
 
 {% block extrajs %}
-<script src="/static/js/register.js"></script>
+<script src="{{ STATIC_URL }}js/register.js"></script>
 {% endblock extrajs %}
