--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,11 @@
     <head>
         <title>{% block title %}Bulletin{% endblock title %}</title>
         <!-- Bootstrap -->
-        <link rel="shortcut icon" href="/static/images/favicon.ico">
+        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico">
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
         
         <!-- Custom CSS -->
-        <link href="/static/css/site.css" rel="stylesheet">
+        <link href="{{ STATIC_URL }}css/site.css" rel="stylesheet">
         {% block head %}
         {% endblock head %}
     </head>
@@ -18,10 +18,10 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js"></script>
-        <script src="/static/js/jquery.flip.min.js"></script>
+        <script src="{{ STATIC_URL }}js/jquery.flip.min.js"></script>
         
         <!--[if lt IE 10]>
-        <script src="/static/js/jquery.placeholder.min.js"></script>
+        <script src="{{ STATIC_URL }}js/jquery.placeholder.min.js"></script>
         
         <script type="text/javascript">
         $('input, textarea').placeholder();
