--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -84,8 +84,8 @@ $(document).ready(function() {
 {% endblock maincontent %}
 
 {% block extrajs %}
-<script src="/static/js/jquery.timeago.js" type="text/javascript"></script>
-<script src="/static/js/md5.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/jquery.timeago.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/md5.js" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function() {
 	// live timestamp
