--- a/templates/starter_base.html
+++ b/templates/starter_base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-<link href="/static/css/login.css" rel="stylesheet">
+<link href="{{ STATIC_URL }}css/login.css" rel="stylesheet">
 {% endblock head %}
 
 {% block body %}
