--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,11 @@
         <title>{% block title %}Bulletin{% endblock title %}</title>
         <!-- Bootstrap -->
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico">
-        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.min.css" rel="stylesheet">
         
         <!-- Custom CSS -->
         <link href="{{ STATIC_URL }}css/site.css" rel="stylesheet">
+		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-responsive.min.css" rel="stylesheet">
         {% block head %}
         {% endblock head %}
     </head>
