--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
         <!-- Custom CSS -->
         <link href="{{ STATIC_URL }}css/site.css" rel="stylesheet">
 		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="{{ STATIC_URL }}css/responsive.css" rel="stylesheet">
         {% block head %}
         {% endblock head %}
     </head>
@@ -25,7 +26,7 @@
         <script src="{{ STATIC_URL }}js/jquery.placeholder.min.js"></script>
         
         <script type="text/javascript">
-        $('input, textarea').placeholder();
+			$('input, textarea').placeholder();
         </script>
         
         <style type="text/css">
