Commented out the agenda; put the group list and the main content together

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -7,6 +7,16 @@ body {
 	text-align: center;
 }
 
+#content-container {
+	margin-left: 0;
+}
+
+abbr.timeago {
+	border: none;
+	cursor: default;
+	color: #666;
+}
+
 .brand {
 	text-align: left;
 }
