--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -30,6 +30,7 @@
 
 {% block content %}
 <div id="top" class="row-fluid">
+	<div class="span10 offset1">
 	<div class="span2">
 		<div class="well">
 			{% block nav %}
@@ -49,7 +50,7 @@
 			{% endblock nav %}
 		</div>
 	</div>
-	<div id="content-container" class="span8">
+	<div id="content-container" class="span10">
 		<div class="hero-unit">
 			<div id="content">
 				{% block maincontent %}
@@ -59,7 +60,8 @@
 		</div>
 		<div id="footer">This is a footer</div>
 	</div>
-	<div class="span2">
+	</div>
+	<!--<div class="span2">
 		<div class="well">
 			{% block agenda %}
 			<ul id='agenda' class="nav nav-list">
@@ -68,7 +70,7 @@
 			</ul>
 			{% endblock agenda %}
 		</div>
-	</div>
+	</div> -->
 </div>
 {% endblock content %}
 
