--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -84,7 +84,7 @@ $(document).ready(function() {
 {% endblock maincontent %}
 
 {% block extrajs %}
-<script src="{{ STATIC_URL }}js/jquery.timeago.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/jquery.timeago.min.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/md5.js" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function() {
