Messing around with avatar styling.

--- a/static_resources/css/responsive.css
+++ b/static_resources/css/responsive.css
@@ -1,6 +1,5 @@
 @media (max-width: 979px) {
-    .navbar-fixed-top,
-    .navbar-fixed-bottom {
-      position: fixed;
+	.navbar-inner {
+		/*height: 40px;*/
     }
 }
