--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js"></script>
         <script src="{{ STATIC_URL }}js/jquery.flip.min.js"></script>
+        <script src="{{ STATIC_URL }}js/site.js"></script>
         
         <!--[if lt IE 10]>
         <script src="{{ STATIC_URL }}js/jquery.placeholder.min.js"></script>
@@ -36,25 +37,6 @@
 		</style>
         
         <![endif]-->
-        
-        <!-- Google Analytics -->
-		<script type="text/javascript">
-		var _gaq = _gaq || [];
-			_gaq.push([ '_setAccount', 'UA-36110349-1' ]);
-			_gaq.push([ '_setDomainName', 'bulletinapp.net' ]);
-			_gaq.push([ '_trackPageview' ]);
-			
-			(function() {
-				var ga = document.createElement('script');
-				ga.type = 'text/javascript';
-				ga.async = true;
-				ga.src = ('https:' == document.location.protocol ? 'https://ssl'
-						: 'http://www')
-						+ '.google-analytics.com/ga.js';
-				var s = document.getElementsByTagName('script')[0];
-				s.parentNode.insertBefore(ga, s);
-			})();
-		</script>
 	
 		{% block extrajs %}
 	    {% endblock extrajs %}
