Jump to Top button fixed at bottom right (hidden for now until design is fixed)

--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -67,6 +67,8 @@
 		</div>
 	</div> -->
 </div>
+
+<div id="jump-top" class="hide well"><i class="icon-arrow-up"></i></div>
 {% endblock content %}
 
 {% endblock body %}
