--- a/templates/500.html
+++ b/templates/500.html
@@ -1,1 +1,7 @@
-THIS IS A 500!
+{% extends "starter_base.html" %}
+
+{% block formtype %}
+<div class="clearfix">
+    <h2 class="form-signin-heading">500: Your request cannot be completed</h2>
+</div>
+{% endblock formtype %}
