--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -86,6 +86,7 @@ $(document).ready(function() {
 {% endblock maincontent %}
 
 {% block extrajs %}
+{{ block.super }}
 <script src="{{ STATIC_URL }}js/jquery.timeago.min.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/md5.js" type="text/javascript"></script>
 <script type="text/javascript">
