Navbar good enough for now

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -54,8 +54,7 @@ abbr.timeago {
 }
 
 .navbar-inner .container {
-    max-width: 1000px;
-    margin: 0 auto;
+    max-width: 900px;
 }
 
 .navbar .avatar {
@@ -119,5 +118,6 @@ textarea {
 
 .container-narrow {
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 940px;
+    overflow: hidden;
 }
