--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 	{% csrf_token %}
 	<h2 class="form-signin-heading">Register your account</h2>
 	{{ form }}
-	<input class="register-btn btn btn-large btn-primary pull-left"
+	<input id="register-btn" class="btn btn-large btn-primary pull-left"
 		type="submit" value="Register" /> <a href=".."
 		class="back-btn btn btn-large pull-right">Back</a>
     <div class="loading-spinner hide"></div>
