--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -27,7 +27,7 @@
 <div id="top" class="row-fluid">
 	<div class="container-narrow">
 	<div class="span3">
-		<div class="well">
+		<div id='left-column' class="well">
 			{% block nav %}
 			<ul id="team-nav" class="nav nav-list">
 			    <li {% if not grpid %} class="active" {% endif %} ><a href="/">Inbox</a></li>
