--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -11,7 +11,8 @@
     <ul class="nav pull-right">
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <img class="avatar pull-left media-object" src="{{ user.email|gravatar:'30' }}" alt="author's gravatar" />{{ user.first_name }} {{ user.last_name }}
+          <img class="avatar pull-left media-object" src="{{ user.email|gravatar:'30' }}" alt="author's gravatar" />
+          <span>{{ user.first_name }} {{ user.last_name }}</span>
           <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
